debexpo/public/style.css
/* Stylesheet for debexpo */
/* Remotely derived from the mentors.debian.net stylesheet. */
/* Copyright © 2008 Christoph Haas <email@christoph-haas.de> */
/* and published under the same license as debexpo itself */

/* Yahoo's CSS reset */
body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td {
    margin:0;
    padding:0;
}
table {
    border-collapse:collapse;
    border-spacing:0;
}
fieldset,img {
    border:0;
}
address,caption,cite,code,dfn,em,strong,th,var {
    font-style:normal;
    font-weight:normal;
}
ol,ul {
    list-style:none;
}
caption,th {
    text-align:left;
}
h1,h2,h3,h4,h5,h6 {
    font-size:100%;
    font-weight:normal;
}
q:before,q:after {
    content:'';
}
abbr,acronym { border:0;
}
/*-----------------------------------------*/

body
{
    font-family: sans-serif;
    font-size: 10pt;
    background-color: #ffffff;
    margin: 0;
    padding: 0;
}

fieldset {
    border: 1px solid #a0a0a0;
    padding: 0.5em 1em 0.5em 1em;
    margin: 0.5em 0 0.5em 0;
    -moz-border-radius: .5em;
    -webkit-border-radius: .5em;
    border-radius: .5em;
    background-color: #f0f0f0;
}

legend {
    border: 1px solid #a0a0a0;
    background-color: #f0f0f0;
}

textarea {
    border: 1px solid #a0a0a0;
}

img
{
    border: 0;
}

h1
{
    font-size: 150%;
    margin: 1em 0 0.5em 0;
    color: #E98F1D;
}

h2
{
    font-size: 130%;
    margin: 1em 0 0.2em 0;
    color: #E98F1D;
}

h3
{
    font-size: 120%;
    margin: 1em 0 0.2em 0;
}

/* Navigation menu on the left site */
#menu
{
    background-color: #e5e5e5;
}

td.navigation-td {
    /* 7 pixel wide shadow on the right border of the menu */
    background: right repeat-y url(/shadow-right.png);
    background-color: #f8c078;
    padding-right: 7px;
}

/* Colored subsections of the left menu */
#menu .start {
    background-color: #f8c078;
    padding: 1em;
}

#menu .maintainers {
    background-color: #97cc4c;
    padding: 1em;
}

#menu .sponsors {
    background-color: #99dbf0;
    padding: 1em;
}

#menu .support {
    background-color: #F5DF71;
    padding: 1em;
}

#menu h2 {
    font-size: 150%;
    margin: 0 0 .3em 0;
    color: #000000;
}

#menu ul {
    padding: 0;
    margin: 0 0 0 1em;
    list-style-type: none;
    color: #000000;
    font-size: 110%;
}

#menu li {
}


/* The currently running CGI is highlighted */
.currentcgi
{
    border: 1px solid red;
}

#maincontent
{
    padding: 0 1em 1em 1em;
}

#header
{
    background-color: #000000;
    color: #f0f0f0;
    border-bottom: .5em solid #E98F1D;
    padding: 0.7em 2em 0.7em 2em;
}

#logo
{
    float: right;
    position: absolute;
    top: 5px;
    right: 5px;
}

#headertitle
{
    font-family: Georgia, "Bitstream Vera Serif", Palatino, serif;
    font-size: 250%;
    padding: 0;
    margin: 0;
    font-weight: bold;
}

#headersubtitle
{
    padding: 0;
    margin: 0;
    font-size: 110%;
    font-weight: bold;
}

#footer
{
    background-color: #e5e5e5;
    color: #808080;
    padding: 0.2em 1em 0.2em 1em;
    clear: both;
}

#navigation
{
    padding: 0.2em 1em 0.2em 1em;
    background: #e0e0e0;
}

#navigation > .right
{
	position: absolute;
	right: 1em;
}

p,form
{
	color: #606060;
	margin: 0.3ex 0em 1ex 0;
	padding: 0 0 0 0;
        line-height: 1.8em;
}

pre
{
    background-color: #f0f0f0;
}

a, a:visited
{
    color: #000000;
    border-bottom: 1px dashed #808080;
    text-decoration: none;
}

a:hover
{
    background-color: #f0f0f0;
}

ul
{
    color: #606060;
}

td
{
    vertical-align: top;
}

/* Table rows with light lines seperating the rows */
td.lines
{
    border-top: 1px solid #e8e8e8;
    border-bottom: 1px solid #e8e8e8;
}

th
{
    color: #606060;
    font-weight: bolder;
    text-align: left;
    vertical-align: top;
    padding-right: 1em;
}

.warning
{
    color: red;
    font-weight: bolder;
}

.error-message
{
    color: red;
}

.ok
{
    color: green;
    font-weight: bolder;
}

/* Red box for HTTP errors (40x) */
.error-border {
    border: 1em solid red;
    padding: 1em;
    margin-top: 2em;
}

